More flexible to test back-pressure strategies